apps/ai-whatif/deployment-backend-r.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiwhatif-backend-r
  namespace: ai-whatif
  labels:
    app: aiwhatif-backend-r
    type: backend
spec:
  revisionHistoryLimit: 2
  
  selector:
    matchLabels:
      app: aiwhatif-backend-r
  template:
    metadata:
      labels:
        app: aiwhatif-backend-r
        type: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: aiwhatif-backend-r
          image: ghcr.io/curatimexai/nightingale-aiwhatif-backend-r:1c94a89cf784e96e77d5739da322b2bd2f988d53
          ports:
            - containerPort: 9000
          
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          startupProbe:
            tcpSocket:
              port: 9000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
          
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 500m
              memory: 4Gi
