apps/ai-whatif/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiwhatif-frontend
  namespace: ai-whatif
  labels:
    app: aiwhatif-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: aiwhatif-frontend
  template:
    metadata:
      labels:
        app: aiwhatif-frontend
        type: frontend 
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: aiwhatif-frontend
          image: ghcr.io/curatimexai/nightingale-aiwhatif-frontend:73c2e323850045c8556753a091b950b1601396af
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
