apps/ai-whatif/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiwhatif-ingress
  namespace: ai-whatif
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - healthyheart.mlthrive.com
        - api.aiwhatif.mlthrive.com
        - api-python.aiwhatif.mlthrive.com
        - aiwhatif.mlthrive.com
      secretName: aiwhatif-mlthrive-tls

  rules:
    - host: aiwhatif.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-frontend-service
                port:
                  number: 80

    - host: healthyheart.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-frontend-service
                port:
                  number: 80

    - host: api.aiwhatif.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-backend-r-service
                port:
                  number: 9000

    - host: api-python.aiwhatif.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-backend-py-service
                port:
                  number: 8000
